[feature/mobileapp/sso-implementation] Return Scope list and fix redirect_uri generation
