# apps/api/generated/openapi-v1.json
@@ -5043,6 +5043,12 @@
           },
           "scope": {
             "type": "string"
+          },
+          "scopes": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
